--- a/Frontend/src/Component/PanelAdmin/Sidebar/Sidebar.css
+++ b/Frontend/src/Component/PanelAdmin/Sidebar/Sidebar.css
@@ -1,10 +1,6 @@
 #aside {
-    @apply fixed md:relative z-30 shadow-lg md:shadow-none md:rounded-none rounded-r-2xl h-full
-     md:translate-x-0 lg:pt-4 md:w-44 lg:w-48 xl:w-52 theme p-0 md:p-2 lg:p-5 select-none
-}
-#aside{
-    min-height: 850px;
-    max-height: 850px;
+    @apply fixed md:relative z-30 shadow-lg md:shadow-none md:rounded-none rounded-r-2xl h-screen
+     md:translate-x-0 lg:pt-4 theme p-0 md:p-2 lg:p-5 select-none 
 }
 .theme{
     @apply bg-white dark:bg-gray-900 transition-colors duration-75 text-black dark:text-gray-100
@@ -13,8 +9,7 @@
     @apply  md:hidden
 }
 .logo p{
-    text-shadow: 0 0 25px #00fffb;
-    
+    text-shadow: 0 0 25px #00fffb; 
 }
 .logo{
     @apply text-3xl font-bold hidden items-center justify-center md:flex theme
